{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 23,
  "lineage": "2374b9bf-4766-1420-5a20-c05218978a52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dc30a976b5a5f56",
            "arn": "arn:aws:ec2:af-south-1:167217327829:elastic-ip/eipalloc-05dc30a976b5a5f56",
            "domain": "vpc",
            "id": "eipalloc-05dc30a976b5a5f56",
            "network_border_group": "af-south-1",
            "public_dns": "ec2-13-245-212-168.af-south-1.compute.amazonaws.com",
            "public_ip": "13.245.212.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iec-voting-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-nat-eip",
              "Project": "iec-voting"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:internet-gateway/igw-04ce25186392e8304",
            "id": "igw-04ce25186392e8304",
            "owner_id": "167217327829",
            "tags": {
              "Name": "iec-voting-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-igw",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05dc30a976b5a5f56",
            "association_id": "eipassoc-0d5486e7402e0f2c6",
            "connectivity_type": "public",
            "id": "nat-0132439d3f7645f6f",
            "network_interface_id": "eni-0c975f3d7f5934b95",
            "private_ip": "10.0.1.128",
            "public_ip": "13.245.212.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b74b2592df995fc",
            "tags": {
              "Name": "iec-voting-nat-gw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-nat-gw",
              "Project": "iec-voting"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:route-table/rtb-07e1728ac6754e441",
            "id": "rtb-07e1728ac6754e441",
            "owner_id": "167217327829",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "iec-voting-db-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-db-rt",
              "Project": "iec-voting"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:route-table/rtb-0f4b40a89e14d5ae2",
            "id": "rtb-0f4b40a89e14d5ae2",
            "owner_id": "167217327829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0132439d3f7645f6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iec-voting-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-private-rt",
              "Project": "iec-voting"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:route-table/rtb-0c626f0129b4dfc8a",
            "id": "rtb-0c626f0129b4dfc8a",
            "owner_id": "167217327829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ce25186392e8304",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iec-voting-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-public-rt",
              "Project": "iec-voting"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c90ff65a304be8",
            "route_table_id": "rtb-07e1728ac6754e441",
            "subnet_id": "subnet-09b5c620a8b2d943f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dafb3258a19da40",
            "route_table_id": "rtb-07e1728ac6754e441",
            "subnet_id": "subnet-0e6795f9ebad76ccf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ed78d2dd9c6001e",
            "route_table_id": "rtb-0f4b40a89e14d5ae2",
            "subnet_id": "subnet-09bf0382e551ecaea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8d1b399fb9e5e35",
            "route_table_id": "rtb-0f4b40a89e14d5ae2",
            "subnet_id": "subnet-01d63816e9e785533"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b55db594389f3cb4",
            "route_table_id": "rtb-0c626f0129b4dfc8a",
            "subnet_id": "subnet-07b74b2592df995fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021ebd1bb86a3cee6",
            "route_table_id": "rtb-0c626f0129b4dfc8a",
            "subnet_id": "subnet-0a082aa581f31d028"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:subnet/subnet-09b5c620a8b2d943f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b5c620a8b2d943f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167217327829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iec-voting-db-0"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-db-0",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:subnet/subnet-0e6795f9ebad76ccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6795f9ebad76ccf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167217327829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iec-voting-db-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-db-1",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:subnet/subnet-09bf0382e551ecaea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf0382e551ecaea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167217327829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iec-voting-private-0"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-private-0",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:subnet/subnet-01d63816e9e785533",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d63816e9e785533",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "167217327829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iec-voting-private-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-private-1",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:subnet/subnet-07b74b2592df995fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b74b2592df995fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "167217327829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iec-voting-public-0"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-public-0",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:subnet/subnet-0a082aa581f31d028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a082aa581f31d028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "167217327829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iec-voting-public-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-public-1",
              "Project": "iec-voting"
            },
            "vpc_id": "vpc-07e549f2969185dcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:167217327829:vpc/vpc-07e549f2969185dcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026989946cec15b38",
            "default_route_table_id": "rtb-0bbc5217e66934c21",
            "default_security_group_id": "sg-07010cc990c40af1d",
            "dhcp_options_id": "dopt-088fad8f9cd8a98b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e549f2969185dcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbc5217e66934c21",
            "owner_id": "167217327829",
            "tags": {
              "Name": "iec-voting-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "iec-voting-vpc",
              "Project": "iec-voting"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}